# consistent-cache

./: CMakeLists.txt  Dockerfile  callgrind.out.36.annotate  callgrind.out.86.annotated  consistent-cache-client.yaml  consistent-cache-server.yaml  launch.sh  launch_client.sh  launch_server.sh
benchmark/: Dockerfile  hello-world-cpp-pod.yaml  hello.cpp  launch.sh
client/: CMakeLists.txt
client/include/: client.hpp
client/src/: client.cpp  main.cpp
proto/: CMakeLists.txt
proto/myproto/: consistent_cache.proto
server/: CMakeLists.txt
server/include/: consistent_cache_service.hpp  consistent_cache_service_callback.hpp  globals.hpp
server/src/: consistent_cache_service.cpp  globals.cpp  main.cpp
